Ce que j'ai modifié ou ajouté